# RAG-Powered-Travel-Concierge-System

./: .gitignore  README.md  evaluate_system.py  make.py  pyproject.toml  requirements.txt  setup.py  test_evaluation.py
app/: main.py
app/api/: routes.py
app/core/: config.py  evaluation.py  model_training.py  rag_system.py
app/models/: travel.py
app/services/: travel_planner.py
data/: comprehensive_evaluation_results.json  evaluation_ground_truth.json  evaluation_test_data.json  rag_documents.json
docs/: This_vs_that.md  alternative_models.md  beginner_tutorial.html  challenges.md  evaluation_guide.md  training_model.md
tests/: test_travel_planner.py
